addins/MonoDevelop.Monobjc/Parsing/ObjCParser.cs
// Generated from ObjC.g4 by ANTLR 4.0.1-SNAPSHOT
namespace MonobjcDevelop.Monobjc.Parsing {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

public partial class ObjCParser : Parser {
	public const int
		T__112=1, T__111=2, T__110=3, T__109=4, T__108=5, T__107=6, T__106=7, 
		T__105=8, T__104=9, T__103=10, T__102=11, T__101=12, T__100=13, T__99=14, 
		T__98=15, T__97=16, T__96=17, T__95=18, T__94=19, T__93=20, T__92=21, 
		T__91=22, T__90=23, T__89=24, T__88=25, T__87=26, T__86=27, T__85=28, 
		T__84=29, T__83=30, T__82=31, T__81=32, T__80=33, T__79=34, T__78=35, 
		T__77=36, T__76=37, T__75=38, T__74=39, T__73=40, T__72=41, T__71=42, 
		T__70=43, T__69=44, T__68=45, T__67=46, T__66=47, T__65=48, T__64=49, 
		T__63=50, T__62=51, T__61=52, T__60=53, T__59=54, T__58=55, T__57=56, 
		T__56=57, T__55=58, T__54=59, T__53=60, T__52=61, T__51=62, T__50=63, 
		T__49=64, T__48=65, T__47=66, T__46=67, T__45=68, T__44=69, T__43=70, 
		T__42=71, T__41=72, T__40=73, T__39=74, T__38=75, T__37=76, T__36=77, 
		T__35=78, T__34=79, T__33=80, T__32=81, T__31=82, T__30=83, T__29=84, 
		T__28=85, T__27=86, T__26=87, T__25=88, T__24=89, T__23=90, T__22=91, 
		T__21=92, T__20=93, T__19=94, T__18=95, T__17=96, T__16=97, T__15=98, 
		T__14=99, T__13=100, T__12=101, T__11=102, T__10=103, T__9=104, T__8=105, 
		T__7=106, T__6=107, T__5=108, T__4=109, T__3=110, T__2=111, T__1=112, 
		T__0=113, IDENTIFIER=114, CHARACTER_LITERAL=115, STRING_LITERAL=116, HEX_LITERAL=117, 
		DECIMAL_LITERAL=118, OCTAL_LITERAL=119, FLOATING_POINT_LITERAL=120, IMPORT=121, 
		INCLUDE=122, PRAGMA=123, WS=124, COMMENT=125, LINE_COMMENT=126;
	public static readonly string[] tokenNames = {
		"<INVALID>", "'self'", "'register'", "'*'", "'@synchronized'", "'double'", 
		"'inout'", "'}'", "'float'", "'char'", "'do'", "'auto'", "'*='", "'oneway'", 
		"')'", "'@trystatement'", "'unsigned'", "'@implementation'", "'goto'", 
		"'@property'", "'byref'", "'#ifdef'", "'@encode'", "'|'", "'!'", "'long'", 
		"'sizeof'", "'@protected'", "'short'", "'-='", "'in'", "','", "'while'", 
		"'@finally'", "'-'", "'if'", "'int'", "'?'", "'void'", "'bycopy'", "'>>='", 
		"'...'", "'break'", "'+='", "'^='", "'else'", "'.+'", "'struct'", "'++'", 
		"'extern'", "'.'", "'+'", "'&&'", "'||'", "'>'", "'%='", "'/='", "'switch'", 
		"'/'", "'~'", "'out'", "'@throw'", "'&'", "'['", "'#ifndef'", "'@end'", 
		"'<'", "'--'", "'continue'", "'!='", "'<='", "'id'", "'<<'", "'@selector'", 
		"'@protocol'", "'case'", "'@package'", "'@synthesize'", "'@dynamic'", 
		"'super'", "'%'", "'->'", "'union'", "'signed'", "'@catch'", "'='", "'const'", 
		"'|='", "'enum'", "'@class'", "'<<='", "']'", "'default'", "'@public'", 
		"':'", "'('", "'&='", "'#endif'", "'{'", "'#undef'", "'static'", "'#define'", 
		"'>>'", "'^'", "'@private'", "'for'", "'return'", "'typedef'", "';'", 
		"'volatile'", "'@interface'", "'=='", "'#if'", "'>='", "IDENTIFIER", "CHARACTER_LITERAL", 
		"STRING_LITERAL", "HEX_LITERAL", "DECIMAL_LITERAL", "OCTAL_LITERAL", "FLOATING_POINT_LITERAL", 
		"IMPORT", "INCLUDE", "PRAGMA", "WS", "COMMENT", "LINE_COMMENT"
	};
	public const int
		RULE_translation_unit = 0, RULE_external_declaration = 1, RULE_preprocessor_declaration = 2, 
		RULE_macro_specification = 3, RULE_class_interface = 4, RULE_category_interface = 5, 
		RULE_class_implementation = 6, RULE_category_implementation = 7, RULE_protocol_declaration = 8, 
		RULE_protocol_declaration_list = 9, RULE_class_declaration_list = 10, 
		RULE_class_list = 11, RULE_protocol_reference_list = 12, RULE_protocol_list = 13, 
		RULE_property_declaration = 14, RULE_property_attributes_declaration = 15, 
		RULE_property_attributes_list = 16, RULE_property_attribute = 17, RULE_class_name = 18, 
		RULE_superclass_name = 19, RULE_category_name = 20, RULE_protocol_name = 21, 
		RULE_instance_variables = 22, RULE_visibility_specification = 23, RULE_interface_declaration_list = 24, 
		RULE_class_method_declaration = 25, RULE_instance_method_declaration = 26, 
		RULE_method_declaration = 27, RULE_implementation_definition_list = 28, 
		RULE_class_method_definition = 29, RULE_instance_method_definition = 30, 
		RULE_method_definition = 31, RULE_method_selector = 32, RULE_keyword_declarator = 33, 
		RULE_selector = 34, RULE_method_type = 35, RULE_property_implementation = 36, 
		RULE_property_synthesize_list = 37, RULE_property_synthesize_item = 38, 
		RULE_type_specifier = 39, RULE_type_qualifier = 40, RULE_protocol_qualifier = 41, 
		RULE_primary_expression = 42, RULE_message_expression = 43, RULE_receiver = 44, 
		RULE_message_selector = 45, RULE_keyword_argument = 46, RULE_selector_expression = 47, 
		RULE_selector_name = 48, RULE_protocol_expression = 49, RULE_encode_expression = 50, 
		RULE_exception_declarator = 51, RULE_try_statement = 52, RULE_catch_statement = 53, 
		RULE_finally_statement = 54, RULE_throw_statement = 55, RULE_try_block = 56, 
		RULE_synchronized_statement = 57, RULE_function_definition = 58, RULE_declaration = 59, 
		RULE_declaration_specifiers = 60, RULE_storage_class_specifier = 61, RULE_init_declarator_list = 62, 
		RULE_init_declarator = 63, RULE_struct_or_union_specifier = 64, RULE_struct_declaration = 65, 
		RULE_specifier_qualifier_list = 66, RULE_struct_declarator_list = 67, 
		RULE_struct_declarator = 68, RULE_enum_specifier = 69, RULE_enumerator_list = 70, 
		RULE_enumerator = 71, RULE_declarator = 72, RULE_direct_declarator = 73, 
		RULE_declarator_suffix = 74, RULE_parameter_list = 75, RULE_parameter_declaration = 76, 
		RULE_initializer = 77, RULE_type_name = 78, RULE_abstract_declarator = 79, 
		RULE_abstract_declarator_suffix = 80, RULE_parameter_declaration_list = 81, 
		RULE_statement_list = 82, RULE_statement = 83, RULE_labeled_statement = 84, 
		RULE_compound_statement = 85, RULE_selection_statement = 86, RULE_iteration_statement = 87, 
		RULE_jump_statement = 88, RULE_expression = 89, RULE_assignment_expression = 90, 
		RULE_assignment_operator = 91, RULE_conditional_expression = 92, RULE_constant_expression = 93, 
		RULE_logical_or_expression = 94, RULE_logical_and_expression = 95, RULE_inclusive_or_expression = 96, 
		RULE_exclusive_or_expression = 97, RULE_and_expression = 98, RULE_equality_expression = 99, 
		RULE_relational_expression = 100, RULE_shift_expression = 101, RULE_additive_expression = 102, 
		RULE_multiplicative_expression = 103, RULE_cast_expression = 104, RULE_unary_expression = 105, 
		RULE_unary_operator = 106, RULE_postfix_expression = 107, RULE_argument_expression_list = 108, 
		RULE_identifier = 109, RULE_constant = 110;
	public static readonly string[] ruleNames = {
		"translation_unit", "external_declaration", "preprocessor_declaration", 
		"macro_specification", "class_interface", "category_interface", "class_implementation", 
		"category_implementation", "protocol_declaration", "protocol_declaration_list", 
		"class_declaration_list", "class_list", "protocol_reference_list", "protocol_list", 
		"property_declaration", "property_attributes_declaration", "property_attributes_list", 
		"property_attribute", "class_name", "superclass_name", "category_name", 
		"protocol_name", "instance_variables", "visibility_specification", "interface_declaration_list", 
		"class_method_declaration", "instance_method_declaration", "method_declaration", 
		"implementation_definition_list", "class_method_definition", "instance_method_definition", 
		"method_definition", "method_selector", "keyword_declarator", "selector", 
		"method_type", "property_implementation", "property_synthesize_list", 
		"property_synthesize_item", "type_specifier", "type_qualifier", "protocol_qualifier", 
		"primary_expression", "message_expression", "receiver", "message_selector", 
		"keyword_argument", "selector_expression", "selector_name", "protocol_expression", 
		"encode_expression", "exception_declarator", "try_statement", "catch_statement", 
		"finally_statement", "throw_statement", "try_block", "synchronized_statement", 
		"function_definition", "declaration", "declaration_specifiers", "storage_class_specifier", 
		"init_declarator_list", "init_declarator", "struct_or_union_specifier", 
		"struct_declaration", "specifier_qualifier_list", "struct_declarator_list", 
		"struct_declarator", "enum_specifier", "enumerator_list", "enumerator", 
		"declarator", "direct_declarator", "declarator_suffix", "parameter_list", 
		"parameter_declaration", "initializer", "type_name", "abstract_declarator", 
		"abstract_declarator_suffix", "parameter_declaration_list", "statement_list", 
		"statement", "labeled_statement", "compound_statement", "selection_statement", 
		"iteration_statement", "jump_statement", "expression", "assignment_expression", 
		"assignment_operator", "conditional_expression", "constant_expression", 
		"logical_or_expression", "logical_and_expression", "inclusive_or_expression", 
		"exclusive_or_expression", "and_expression", "equality_expression", "relational_expression", 
		"shift_expression", "additive_expression", "multiplicative_expression", 
		"cast_expression", "unary_expression", "unary_operator", "postfix_expression", 
		"argument_expression_list", "identifier", "constant"
	};

	public override string GrammarFileName { get { return "ObjC.g4"; } }

	public override string[] TokenNames { get { return tokenNames; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public ObjCParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class Translation_unitContext : ParserRuleContext {
		public External_declarationContext[] external_declaration() {
			return GetRuleContexts<External_declarationContext>();
		}
		public ITerminalNode EOF() { return GetToken(ObjCParser.Eof, 0); }
		public External_declarationContext external_declaration(int i) {
			return GetRuleContext<External_declarationContext>(i);
		}
		public Translation_unitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_translation_unit; }
		public override void EnterRule(IParseTreeListener listener) {
			IObjCListener typedListener = listener as IObjCListener;
			if (typedListener != null) typedListener.EnterTranslation_unit(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IObjCListener typedListener = listener as IObjCListener;
			if (typedListener != null) typedListener.ExitTranslation_unit(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IObjCVisitor<TResult> typedVisitor = visitor as IObjCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTranslation_unit(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Translation_unitContext translation_unit() {
		Translation_unitContext _localctx = new Translation_unitContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_translation_unit);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 223;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				{
				State = 222; external_declaration();
				}
				}
				State = 225;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 2) | (1L << 3) | (1L << 5) | (1L << 6) | (1L << 8) | (1L << 9) | (1L << 11) | (1L << 13) | (1L << 16) | (1L << 17) | (1L << 20) | (1L << 21) | (1L << 25) | (1L << 28) | (1L << 30) | (1L << 36) | (1L << 38) | (1L << 39) | (1L << 47) | (1L << 49) | (1L << 60))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (64 - 64)) | (1L << (71 - 64)) | (1L << (74 - 64)) | (1L << (82 - 64)) | (1L << (83 - 64)) | (1L << (86 - 64)) | (1L << (88 - 64)) | (1L << (89 - 64)) | (1L << (95 - 64)) | (1L << (97 - 64)) | (1L << (99 - 64)) | (1L << (100 - 64)) | (1L << (101 - 64)) | (1L << (107 - 64)) | (1L << (109 - 64)) | (1L << (110 - 64)) | (1L << (112 - 64)) | (1L << (IDENTIFIER - 64)) | (1L << (IMPORT - 64)) | (1L << (INCLUDE - 64)) | (1L << (COMMENT - 64)) | (1L << (LINE_COMMENT - 64)))) != 0) );
			State = 227; Match(ObjCParser.Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class External_declarationContext : ParserRuleContext {
		public Protocol_declarationContext protocol_declaration() {
			return GetRuleContext<Protocol_declarationContext>(0);
		}
		public DeclarationContext declaration() {
			return GetRuleContext<DeclarationContext>(0);
		}
		public Class_declaration_listContext class_declaration_list() {
			return GetRuleContext<Class_declaration_listContext>(0);
		}
		public Class_implementationContext class_implementation() {
			return GetRuleContext<Class_implementationContext>(0);
		}
		public ITerminalNode LINE_COMMENT() { return GetToken(ObjCParser.LINE_COMMENT, 0); }
		public ITerminalNode COMMENT() { return GetToken(ObjCParser.COMMENT, 0); }
		public Preprocessor_declarationContext preprocessor_declaration() {
			return GetRuleContext<Preprocessor_declarationContext>(0);
		}
		public Class_interfaceContext class_interface() {
			return GetRuleContext<Class_interfaceContext>(0);
		}
		public Function_definitionContext function_definition() {
			return GetRuleContext<Function_definitionContext>(0);
		}
		public Protocol_declaration_listContext protocol_declaration_list() {
			return GetRuleContext<Protocol_declaration_listContext>(0);
		}
		public Category_implementationContext category_implementation() {
			return GetRuleContext<Category_implementationContext>(0);
		}
		public Category_interfaceContext category_interface() {
			return GetRuleContext<Category_interfaceContext>(0);
		}
		public External_declarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_external_declaration; }
		public override void EnterRule(IParseTreeListener listener) {
			IObjCListener typedListener = listener as IObjCListener;
			if (typedListener != null) typedListener.EnterExternal_declaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IObjCListener typedListener = listener as IObjCListener;
			if (typedListener != null) typedListener.ExitExternal_declaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IObjCVisitor<TResult> typedVisitor = visitor as IObjCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExternal_declaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public External_declarationContext external_declaration() {
		External_declarationContext _localctx = new External_declarationContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_external_declaration);
		try {
			State = 241;
			switch ( Interpreter.AdaptivePredict(_input,1,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 229; Match(COMMENT);
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 230; Match(LINE_COMMENT);
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 231; preprocessor_declaration();
				}
				break;

			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 232; function_definition();
				}
				break;

			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 233; declaration();
				}
				break;

			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 234; class_interface();
				}
				break;

			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 235; class_implementation();
				}
				break;

			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 236; category_interface();
				}
				break;

			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 237; category_implementation();
				}
				break;

			case 10:
				EnterOuterAlt(_localctx, 10);
				{
				State = 238; protocol_declaration();
				}
				break;

			case 11:
				EnterOuterAlt(_localctx, 11);
				{
				State = 239; protocol_declaration_list();
				}
				break;

			case 12:
				EnterOuterAlt(_localctx, 12);
				{
				State = 240; class_declaration_list();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Preprocessor_declarationContext : ParserRuleContext {
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ITerminalNode IMPORT() { return GetToken(ObjCParser.IMPORT, 0); }
		public Macro_specificationContext macro_specification() {
			return GetRuleContext<Macro_specificationContext>(0);
		}
		public ITerminalNode INCLUDE() { return GetToken(ObjCParser.INCLUDE, 0); }
		public Preprocessor_declarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_preprocessor_declaration; }
		public override void EnterRule(IParseTreeListener listener) {
			IObjCListener typedListener = listener as IObjCListener;
			if (typedListener != null) typedListener.EnterPreprocessor_declaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IObjCListener typedListener = listener as IObjCListener;
			if (typedListener != null) typedListener.ExitPreprocessor_declaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IObjCVisitor<TResult> typedVisitor = visitor as IObjCVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPreprocessor_declaration(this);
			else return visitor.VisitChildren(this);
		}
	}
